--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "SE04",
   "license": "ISC",
   "dependencies": {
-    "electron": "^28.0.0",
     "phaser": "^3.70.0"
+  },
+  "devDependencies": {
+    "electron": "^28.0.0"
   }
 }
